--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -62,7 +62,7 @@
 
 .container {
   max-width: 1100px;
-  margin: 0 50px;
+  margin: 0 8%;
   font-size: 62.5%;
 }
 
@@ -90,7 +90,7 @@ header {
     font-weight: 300;
   }
   h3 { //clock
-    // color: #6CBFEE;
+    color: #6CBFEE;
     font-size: 2.6em;
     margin-left: 2px;
   }
@@ -118,34 +118,148 @@ header {
 }
 
 .message {
-  margin: 10px 0;
+  margin: 15px 0;
   border-radius: 5px;
   color: white;
   h3 {
-    margin: 10px;
     font-size: 2.6em;
     padding-bottom: 10px;
-    margin: 20px 15px 0;
+    margin: 20px 4% 0;
     border-bottom: solid 1px #A1D6F4;
   }
   p {
     font-size: 1.6em;
     line-height: 1.5em;
-    margin: 10px 15px;
+    margin: 10px 4%;
   }
 }
 
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 850px) {
   
   body {
-    background-color: green;  
+    .container {
+      max-width: 1100px;
+      margin: 40px 9%;
+      font-size: 62.5%;
+      .entry:nth-child(odd) {
+        .message {
+          background-color: #6CBFEE;
+          &:before {
+            content: "";
+            position: absolute;
+            left: -12px;
+            top: 12px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 12.5px 12px 12.5px 0;
+            border-color: transparent #6CBFEE transparent transparent;
+          }
+        }
+        .time h3 {
+          color: #6CBFEE;
+        }
+      }
+      .entry:nth-child(even) {
+        .message {
+          background-color: #3594CB;
+          &:before {
+            content: "";
+            position: absolute;
+            left: -12px;
+            top: 12px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 12.5px 12px 12.5px 0;
+            border-color: transparent #3594CB transparent transparent;
+          }
+        }
+        .time h3 {
+          color: #3594CB;
+        }
+      }
+    }
+    .entry {
+      display: flex;
+      justify-content: space-between;
+      margin: 0;
+    }
+
+    header {
+      min-width: 18%;
+      border-right: 10px solid #AFDCF8;
+      position: relative;
+      padding-top: 10px;
+      h3,
+      h5 {
+        margin: 0;
+      }
+      .icon {
+        position: absolute;
+        top: -2px;
+        right: -32px;
+        margin-left: 30%;
+      }
+      .time {
+        max-width: 50%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-end;
+      }
+    }
+
+    .message {
+      margin: 8px 0 8px 6%;
+      color: white;
+      position: relative;
+      border-radius: 5px;
+      h3 {
+        font-size: 3em;
+        padding-bottom: 12px;
+        margin: 40px 8% 25px;
+        border-bottom: solid 1px #A1D6F4;
+      }
+        
+      p {
+        font-size: 2em;
+        font-weight: 300;
+        line-height: 1.3em;
+        margin: 10px 8%;
+        padding: 0 0 45px 0;
+      }
+    }
   }
-  
+  &:last-child {
+    .message {
+      margin-bottom: 0;
+    }
+  }
 }
 
 
-
+@media screen and (min-width: 1100px) {
+  body {
+    .container {
+      margin: 40px auto;
+    }
+    
+    .time {
+      min-width: 70%;
+      h3 {
+        font-size: 5.7em;
+        font-weight: 300;
+      } 
+      h5 {
+        font-size: 1.7em; 
+      }
+    }
+    .icon {
+      margin-left: 0;
+    }
+  }
+}
 
 
 
