fixed container margin in large screen size

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -242,7 +242,7 @@ header {
 @media screen and (min-width: 1100px) {
   body {
     .container {
-      margin: 40px auto;
+      min-margin: 40px 10%;
     }
     
     .time {
